feat:add goals
